--- a/client/src/index.css
+++ b/client/src/index.css
@@ -508,7 +508,7 @@ img {
 
 .nav-link {
     display: block;
-    color: var(--white);
+    /* color: var(--white); */
     padding: 18px;
     text-decoration: none;
     border-bottom: 2px solid transparent;
@@ -2214,12 +2214,12 @@ display: none;
 .mobile-menu-button {
     display: none;
     position: absolute;
-    font-size: 35px;
-    color: var(--grey-dark);
+    font-size: 4.5rem;
+    color: rgba(19, 19, 20, 0.607);
     background: none;
     border: none;
-    right: 30px;
-    top: 30px;
+    right: 0px;
+    /* top: 30px; */
 }
 .nav-buttons-div {
     display: flex;
@@ -2381,7 +2381,7 @@ display: none;
         display: flex;
         /* position: static; */
         text-align: center;
-        float: right;
+        /* float: right; */
         /* top: 35px; */
     }
 
@@ -2840,7 +2840,7 @@ display: none;
     }
 
     .mobile-menu-button {
-        top: 15px;
+        /* top: 15px; */
     }
 }
 @media screen and (max-width: 501px) {
@@ -3136,521 +3136,6 @@ display: none;
 
 /* Organized Media  */
 /* About.js */
-@media (min-height: 780px) and (min-width: 1200px) and (max-witdh: 1600px) {
-    .aboutImageWrapper img {
-            /* position: absolute; */
-            height: auto;
-            bottom: 0;
-            left: calc((100vw - 1300px) / 2);
-            /* margin-top: -100px; */
-    }
-    .aboutImageWrapper {
-    
-        position: relative;
-        width: 100%;
-        display: flex;
-        overflow: hidden;
-        top: 200px;
-        overflow:visible;
-        justify-content: flex-end;
-    }
-    #aboutDoctor {
-        width: 35%;
-    }
-    .nav-buttons-div {
-        /* margin-right: calc(50vw - 50%); */
-        margin-top: 10px;
-    }
-}
-@media (min-width: 1150px) and (max-height: 850px) and (max-width: 1300px) {
-    * {
 
-        /* width: 100vw; */
-        /* overflow-y: hidden; */
-
-    }
-    .header-image {
-        width: 100%;
-    }
-    .aboutImageWrapper img {
-        /* position: absolute; */
-        height: auto;
-        bottom: 0;
-        left: 0;
-        margin-top: -100px;
-    }
-    #bullet-list-div {
-        display:none;
-    }
-    #bullet-list-div-mobile {
-        display: flex;
-        margin-right: 0px;
-    }
-    .main-header {
-        /* height: 23vh; */
-    }
-    .pages-header {
-        /* height: 18vh; */
-    }
-    .aboutImageWrapper {
-        position: relative;
-        /* width: 100vw; */
-        margin-bottom: 100px;
-        margin-top: calc(-0.3 *  90vh);
-        height: calc(0.80 *  88vh);
-        min-height: unset;
-        /* top: 0px; */
-        justify-content: unset;
-        
-    }
-    .aboutImageWrapper img {
-        position: absolute;
-        
-    }
-    
-    .altImageOARDoctor {
-        max-width: 38%;
-
-    }
-    .altImageOARAboutBackground {
-
-        margin: 15px;    
-        max-width: unset;
-
-        box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-    }
-    #aboutDoctor {
-        width: unset;
-        height: unset;
-        bottom: 15px;
-    }
-    #aboutBackgroundForDoctor {
-        /* width: 100%; */
-        width: 60%;
-
-        height: unset;
-    }
-    .imageWrapperOARAbout {
-        width: unset;
-        height: unset;
-        flex-direction: column;
-        box-shadow: none;
-        margin-top: unset;
-    }
-    .imageWrapperOARAbout img {
-        top: 14px;
-    }
-    .mobile-menu-button {
-        top: 20px;
-    }
-}
-@media (min-width: 1300px) and (max-height: 700px) and (min-width: 795px) {
-    #aboutDoctor {
-        width: 40%;
-    }
-    /* .aboutImageWrapper {
-        top: 100px;
-    }
-    .imageWrapperOARAbout #aboutBackgroundForDoctor {
-        top: 105px;
-    }
-    .imageWrapperOARAbout #aboutDoctor {
-        bottom: 0px;
-    }
-    .imageWrapperOARAbout {
-
-        width: 75%;
-    }
-    #aboutBackgroundForDoctor {
-        width: 80%;
-    } */
-}
-@media (min-height: 700px) and (max-width: 1300px) and (min-width: 1050px){
-    .aboutImageWrapper {
-        top: 140px;
-    }
-    .imageWrapperOARAbout #aboutBackgroundForDoctor {
-        top: 105px;
-    }
-    .imageWrapperOARAbout #aboutDoctor {
-        /* top: 0px; */
-        bottom: 62px;
-    }
-    .imageWrapperOARAbout {
-
-        width: 90%;
-    }
-}
-@media (max-width: 1100px) {
-    .mobile-menu-button {
-        /* align-self: flex-end; */
-        
-    }
-    .main-header {
-        /* height: 23vh; */
-        padding: 0px;
-    }
-    .rise {
-        padding: 0px;
-        margin: 0px;
-    }
-    .header-image {
-        width: 79%;
-        margin: 19px 0px 18px 10px;
-    }
-    .nav-buttons-div {
-        flex-direction: column;
-        align-items: center;
-        margin-right: calc(50vw - 50%);
-        margin-top: 10px;
-    }
-    .header-button-dark, .header-button-dark:active {
-        margin: 0px 0px 5px 0px;
-        padding: 0px 0px 0px 0px;
-        width: 60%;
-        /* font-size: 0.8rem; */
-    }
-    .header-button-yellow, .header-button-yellow:active {
-        margin: 5px 0px 10px 0px;
-        padding: 0px 10px 0px 10px;
-        /* font-size: 0.6rem; */
-    }
-    .header-buttons-container {
-        align-items: center;
-        justify-content: center;
-        padding: 0px;
-    }
-    .header-top {
-        /* height: 18vh; */
-        padding: 0px;
-    }
-    #bullet-list-div {
-        display:none;
-    }
-    #bullet-list-div-mobile {
-        display: flex;
-        margin-right: 0px;
-    }
-    #bullet-list-div-mobile h2, p {
-        font-size: 1.2rem;
-        /* align-self: center; */
-        text-align: center;
-        min-width: 40vw;
-        padding: 0px;
-        margin: 0px;
-        line-height: 1.3;
-    }
-    * {
-        overflow-x: hidden;
-
-    }
-    .aboutImageWrapper {
-        position: relative;
-        width: 100vw;
-        /* margin-top: calc(-0.3 *  90vh); */
-        margin-top: calc(-1.8 * (100vw / 4.5) + (100vh / 12)); /* Adjust the values as needed */
-        height: calc(0.80 *  88vh);
-        min-height: unset;
-        top: 0px;
-        justify-content: unset;
-
-    }
-    .aboutImageWrapper img {
-        position: absolute;
-        left: 0;
-
-    }
-
-    .altImageOARDoctor {
-        max-width: 65%;
-
-    }
-    .altImageOARAboutBackground {
-        margin: 15px;    
-        max-width: unset;
-
-        box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-    }
-    #aboutDoctor {
-        width: unset;
-        height: unset;
-        bottom: 15px;
-    }
-    #aboutBackgroundForDoctor {
-        width: 100%;
-        height: unset;
-    }
-    .imageWrapperOARAbout {
-        width: unset;
-        height: unset;
-        flex-direction: column;
-        box-shadow: none;
-        margin-top: unset;
-    }
-    .imageWrapperOARAbout img {
-        bottom: 0; 
-    }
-    #bullet-list-div-mobile {
-        columns: repeat(2, 1fr);
-        gap: 20pxs 0px;
-        align-items: center;
-        align-self: center;
-        padding: 20px;
-    }
-    .bullet-list-about {
-        display: grid;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        margin-top: 0;
-        padding: 0;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15px 50px;
-    }
-    .bullet-list-about li {
-        list-style: none;
-        line-height: 1.3;
-        margin-bottom: 1px;
-        font-size: 1rem;
-        min-width: 100px;
-        padding: 8px;
-    }
-    .large {
-        font-size: 1.2rem;
-    }
-}
-@media (max-height: 850px) and (min-width: 1000px) {
-
-}
-@media (max-width: 760px) and (max-width: 595px) {
-
-    .main-header {
-        /* height: 23vh; */
-    }
-    .pages-header {
-        /* height: 18vh; */
-    }
-    .aboutImageWrapper {
-        position: relative;
-        width: 100vw;
-        /* margin-top: calc(-0.3 *  90vh); */
-        margin-top: calc(-0.35 *  110vh);
-        height: calc(0.80 *  88vh);
-        min-height: unset;
-        top: 0px;
-        bottom: 0px;
-    }
-    .aboutImageWrapper img {
-        position: absolute;
-        left: 0;
-    }
-
-    .altImageOARDoctor {
-        max-width: 65%;
-
-    }
-    .altImageOARAboutBackground {
-        margin: 15px;    
-        max-width: unset;
-
-        box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-    }
-    #aboutDoctor {
-        width: unset;
-        height: unset;
-        bottom: 15px;
-    }
-    #aboutBackgroundForDoctor {
-        width: 100%;
-        height: unset;
-    }
-    .imageWrapperOARAbout {
-        width: unset;
-        height: unset;
-        flex-direction: column;
-        box-shadow: none;
-        margin-top: unset;
-    }
-    .imageWrapperOARAbout img {
-        bottom: 0; 
-    }
-    .header-button-dark {
-        text-decoration-line: none !important;
-        font-size: 0.6rem;
-    }
-    .header-button-yellow {
-        text-decoration-line: none !important;
-        font-size: 0.5rem;
-    }
-}
-@media (max-width: 1800px) and (min-width: 1400px) {
-    #aboutDoctor {
-        width: 37%;
-    }
-}
-@media (max-width: 1600px) and (min-width: 1400px) {
-    #aboutDoctor {
-        width: 42%;
-    }
-    #aboutBackgroundForDoctor {
-        width: 65%;
-    }
-}
-@media (min-height: 970px) and (max-width: 615px) {
-    .imageWrapperOARAbout #aboutBackgroundForDoctor {
-        /* bottom: 110px; */
-    }
-    .imageWrapperOARAbout #aboutDoctor {
-        /* bottom: 114px; */
-    }
-}
-@media (max-width: 900px) and (min-height: 700px) and (min-width: 359px) and (max-width: ) {
-    .imageWrapperOARAbout #aboutBackgroundForDoctor {
-        bottom: 105px;
-    }
-    .imageWrapperOARAbout #aboutDoctor {
-        bottom: 120px;
-    }
-}
-@media (max-width: 450px) {
-    .mobile-menu-button {
-        right: 15px;
-    }
-    .header-img {
-        margin: 25px;
-        width: 120%;
-    }
-}
-
-@media (max-width: 320px) {
-    .header-title-div {
-        padding: 0px;
-        margin: 0px;
-    }
-    .header-img {
-        margin: 25px;
-        width: 10S0%;
-    }
-    .main-header {
-        height: unset;
-    }
-    .pages-header {
-        height: unset;
-    }
-    #aboutDoctor {
-        height: unset;
-        width: unset;
-    }
-    .container-oar-about {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 100%; /* Adjust as needed */
-        box-sizing: border-box; /* Include padding in the total height */
-    }
-    
-    .imageWrapperOARAbout {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 20px;
-        width: 100%;
-        box-shadow: none;
-        margin-top: unset;
-        margin-top: calc(-0.25 *  88vh);
-
-    }
-    
-    .imageWrapperOARAbout img {
-        bottom: 0;
-    }
-    
-    .aboutImageWrapper {
-        position: relative;
-        width: 100%;
-        height: 100vw;
-        overflow: hidden;
-        margin-top: unset;
-    }
-    
-    .aboutImageWrapper img {
-        position: absolute;
-        width: 100%;
-        height: auto;
-        bottom: 0;
-
-    }
-    #bullet-list-div-mobile {
-        columns: repeat(2, 1fr); /* Two equal-width columns */
-        gap: 2px 0px;
-        align-items: center;
-        align-self: center;
-        width: 50%;
-    }
-    #bullet-list-div-mobile h2, p {
-        font-size: 0.8rem;
-        align-self: center;
-        text-align: center;
-        max-width: 45vw;
-        padding: 0px;
-        margin: 0px;
-        line-height: 1.3;
-        margin-bottom: 10px;
-
-    }
-    .altImageOARAboutBackground {
-        box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-        z-index: 1; /* Ensure the background image is behind the doctor image */
-        margin: 15px;    
-    }
-    
-    .altImageOARDoctor {
-        max-width: 65%;
-        width: 100%;
-        bottom: 15px
-    }
-    
-    .altImageOther {
-        max-width: 100%;
-        height: auto;
-      }
-      
-      .separator-oar-about {
-        border-bottom: 1px solid black;
-        width: 100%;
-        margin-bottom: 20px;
-      }
-
-      
-      .bullet-list-about {
-        display: grid;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        margin-top: 0;
-        padding: 0;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
-        gap: 00px 5px; /* Add some space between items */
-      }
-      
-      .bullet-list-about li {
-        list-style: none;
-        line-height: 1.3;
-        margin-bottom: 1px;
-        font-size: 0.7em;
-        min-width: 70px;
-
-      }
-      
-      .bullet-list-about h3 {
-        margin: 0;
-        color: #333;
-      }
-      .large {
-        font-size: 1rem;
-    }
-}
 
 /* ----- Organized Media ----- */
