--- a/client/src/index.css
+++ b/client/src/index.css
@@ -297,6 +297,8 @@ img {
     width: 100%;
     top: 0;
     left: 0;
+    /* background-color: rgba(143, 0, 72, 0.1); */
+    background-color: rgba(250, 0, 0, 0.1);
 }
 
 .slide {
@@ -317,14 +319,7 @@ img {
     text-align: center;
 }
 /* Define the fade-in animation */
-@keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
+
   
   /* Define the fade-out animation */
   @keyframes fadeOut {
@@ -338,10 +333,64 @@ img {
   
   /* Apply the initial animation to the element */
   .carousel-img {
-    animation: fadeIn 0.5s ease-in forwards; /* Fade in over 0.5 seconds */
+    /* Apply the animation named 'fadeIn' */
+    animation: fadeIn 1s ease-in forwards;
+    /* Set the initial opacity to 0 to start with a fully transparent element */
+    /* opacity: 0; */
+    /* Set the dimensions to fill the parent container */
     height: 100%;
     width: 100%;
+    background-color: var(--violet);
   }
+  
+  /* Define the keyframes for the fadeIn animation */
+  @keyframes fadeIn {
+    /* Start with opacity 0 (fully transparent) */
+    0% {
+      opacity: 0;
+    }
+    /* Gradually increase opacity to 10% at 10% of the animation duration */
+    10% {
+      opacity: 0.1;
+    }
+    /* Continue increasing opacity to 20% at 20% of the animation duration */
+    20% {
+      opacity: 0.2;
+    }
+    /* Increase opacity to 30% at 30% of the animation duration */
+    30% {
+      opacity: 0.3;
+    }
+    /* Increase opacity to 40% at 40% of the animation duration */
+    40% {
+      opacity: 0.4;
+    }
+    /* Increase opacity to 50% at 50% of the animation duration */
+    50% {
+      opacity: 0.5;
+    }
+    /* Increase opacity to 60% at 60% of the animation duration */
+    60% {
+      opacity: 0.6;
+    }
+    /* Increase opacity to 70% at 70% of the animation duration */
+    70% {
+      opacity: 0.7;
+    }
+    /* Increase opacity to 80% at 80% of the animation duration */
+    80% {
+      opacity: 0.8;
+    }
+    /* Increase opacity to 90% at 90% of the animation duration */
+    90% {
+      opacity: 0.9;
+    }
+    /* Finally, reach full opacity (1) at the end of the animation */
+    100% {
+      opacity: 1;
+    }
+  }
+  
   
   /* Apply the fade-out animation after a delay */
   .carousel-img.fade-out {
@@ -535,30 +584,40 @@ img {
 .nav-link-container:hover > .nav-link {
     background-color: var(--blue-dark);
 }
-
 .submenu {
-    display: none;
     position: absolute;
     background-color: var(--white);
     z-index: 2;
+    padding: 10px;
+    justify-content: center;
+    text-align: center;
+    opacity: 0; /* Initially hidden */
+    max-height: 0; /* Initially collapsed */
+    overflow: hidden;
+    transition: max-height 0.3s, opacity 0.3s; /* Add transition */
+}
+
+.nav-link-container:hover .submenu {
+    max-height: 400px;
+    opacity: 1;
 }
 
 .submenu-list {
-    min-width: 264px;
+    min-width: 240px;
     display: grid;
     align-items: center;
     grid-gap: 0px; /* Adjust the gap between items */
-    padding: 10px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px;
     grid-template-columns: repeat(1, minmax(0, 1fr)); /* Initial three columns */
-
+    
 }
 
 .submenu-two-column {
-    min-width: 527px;
+    min-width: 480px;
     display: grid;
     align-items: center;
-    grid-gap: 0px; /* Adjust the gap between items */
-    padding: 10px;
+    grid-gap: 0px 20px; /* Adjust the gap between items */
     grid-template-columns: repeat(2, minmax(0, 1fr)); /* Initial three columns */
 
 }
@@ -573,20 +632,56 @@ img {
 
 }
 
+
 .sub-link {
-    padding: 15px 20px 15px 30px;
+    padding: 15px 20px 15px 20px;
     text-decoration: none;
-    border-bottom: 1px solid var(--grey-light);
+    border-bottom: 2px solid transparent; /* Hide the original border */
+    background-image: linear-gradient(to right, rgba(143, 0, 72, 0.5), rgba(143, 0, 72, 0.5) 50%, transparent 50%);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    transition: background-position 0.3s, font-size 0.3s; /* Add font-size transition */
     font-size: 1rem;
+    color: black; /* Set initial text color */
+    border-bottom: 1px solid rgb(143, 0, 72);
+
+}
+
+.sub-link:hover {
+    background-position: 0 0;
+    font-size: 1.2rem;
+    color: white;
 }
 
 .sub-link:active {
     color: rgba(248, 247, 246, 0.3);
+    transform: scale(1.05);
+}
+.sub-link::before,
+.sub-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(143, 0, 72, 0.7);
+    z-index: 1;
 }
 
-.sub-link:hover,
-.sub-link.active {
-    background-color: rgba(151, 150, 149, 0.2);
+.sub-link::before {
+    bottom: -2px; /* Distance from the bottom */
+}
+
+.sub-link::after {
+    top: -2px; /* Distance from the top */
+}
+
+.sub-link:hover::before {
+    height: 2px; /* Increase the height on hover */
+}
+
+.sub-link:hover::after {
+    height: 2px; /* Increase the height on hover */
 }
 
 /* END NAVBAR STYLES */
@@ -2323,7 +2418,7 @@ display: none;
         width: calc(88% / 2);
     }
 }
-@media (max-width: 1360px) {
+@media (max-width: 1000px) {
     .expertise-name {
         font-size: 0.8rem;
     }
@@ -2359,6 +2454,8 @@ display: none;
     }
     .main-footer {
         padding: 60px 35px 60px 0;
+        position: relative;
+        z-index: 1;
     }
     .footer-grid {
         display: block;
@@ -2434,11 +2531,13 @@ display: none;
         height: 100%;
         width: 100%;
         top: 0;
+        padding: 0px 10px 0px 4px;
+        margin: 0px;
         left: 0;
         background: transparent;
         border: none;
         color: var(--white);
-        font-size: 20px;
+        font-size: 10px;
         display: flex;
         align-items: center;
         cursor: pointer;
@@ -2549,7 +2648,22 @@ display: none;
 
 }
 @media (max-width: 1015px) {
-
+    .pages-header {
+        background-image: url(https://i.imgur.com/Cb9CEbY.webp);
+        background-size: cover;
+        background-position: right;
+        background-attachment: fixed;
+        border-bottom: 5px solid rgb(143, 0, 72);
+        color: #fff;
+        padding: 10px;
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+    .pages-title {
+        font-size: 1.5rem;
+        margin: 0px;
+    }
     .grid-item {
         width: calc(90% / 2);
     }
@@ -2800,10 +2914,10 @@ display: none;
 @media (max-width: 576px) {
     
     #form-divs {
-        width: 90vw !important;
-        position: unset !important;
-        margin-top: 0px !important;
-        align-items: center !important;
+        /* width: 90vw !important; */
+        /* position: unset !important; */
+        /* margin-top: 0px !important; */
+        /* align-items: center !important; */
         
     }
     .header-button-dark {
@@ -2844,6 +2958,22 @@ display: none;
     }
 }
 @media screen and (max-width: 501px) {
+    .pages-header {
+        background-image: url(https://i.imgur.com/Cb9CEbY.webp);
+        background-size: cover;
+        background-position: right;
+        background-attachment: fixed;
+        border-bottom: 5px solid rgb(143, 0, 72);
+        color: #fff;
+        padding: 10px;
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+    .pages-title {
+        font-size: 1.2rem;
+        margin: 0px;
+    }
     #chatbox-div-parent {
       position: relative;
     }
@@ -3061,7 +3191,7 @@ display: none;
     grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
     gap: 10px 20px; /* Add some space between items */
 }
-#bullet-list-div-mobile h2, p {
+#bullet-list-div-mobile h2 p {
     font-size: 1.2rem;
     /* align-self: center; */
     text-align: center;
