--- a/client/src/components/helpers/AboutUsComponent.css
+++ b/client/src/components/helpers/AboutUsComponent.css
@@ -51,6 +51,7 @@
     flex: 1;
     background-image: url(https://i.imgur.com/AzYkCf0.webp);
     background-size: cover;
+    border-bottom: 4px solid rgb(74, 1, 37);
 
     height: 100vh;
     width: 100%;
@@ -99,7 +100,255 @@
     color: var(--black);
     align-self: flex-start;
 }
+@media (max-width: 1030px) {
+    .about-container {
 
+    }
+    .about-container-top {
+        padding: 50px 50px 50px 50px;
+    }
+    .about-container-bottom {
+
+    }
+    .about-container-bottom-right {
+        display: flex;
+        flex: 1;
+        background-color: #232323;
+        padding: 0px 0px 0px 0px;
+        height: 75vh;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-container-bottom-left {
+        display: flex;
+        flex: 1;
+        background-image: url(https://i.imgur.com/AzYkCf0.webp);
+        background-size: cover;
+        padding: 0px 0px 0px 0px;
+        height: 75vh;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-title {
+        font-size: 1.5rem;
+        width: 60vw;
+        line-height: 25px;
+        margin: 0px;
+    }
+    .about-description {
+        padding: 15px 0px 25px 0px;
+        font-size: 01rem;
+        width: 90%;
+        line-height: 16px;
+    }
+    .about-description-right {
+        text-align: left;
+        margin: 0px;
+        padding: 10px 0px 0px 0px;
+        font-weight: 400;
+        color: white;
+        font-size: 0.8rem;
+        width: 75%;
+    }
+    .about-title-right {
+        text-align: center;
+        margin: 0px;
+        padding: 0px 0px 15px 0px;
+        font-weight: 400;
+        border-bottom: 1px solid rgb(143, 0, 72);
+        color: white;
+        font-size: 1.8rem;
+        width: 85%;
+        line-height: 20px;
+    }
+    .about-right-button {
+        width: unset;
+        font-size: 0.7rem;
+        margin: 10px 0px 0px 0px;
+        padding: 0px 0px 0px 0px;
+        
+    }
+    .about-right-button .btn {
+        
+        font-size: 1rem;
+        padding: 0px 5px 0px 5px;
+        margin: 0px 0px 0px 0px;
+
+    }
+    .header-button-white,
+    .header-button-white:active {
+
+    }
+}
+@media (max-width: 815px) {
+    .about-container {
+
+    }
+    .about-container-top {
+        padding: 30px 20px 30px 20px;
+    }
+    .about-container-bottom {
+
+    }
+    .about-container-bottom-right {
+        display: flex;
+        flex: 1;
+        background-color: #232323;
+        padding: 0px 0px 0px 0px;
+        height: 35vh;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-container-bottom-left {
+        display: flex;
+        flex: 1;
+        background-image: url(https://i.imgur.com/AzYkCf0.webp);
+        background-size: cover;
+        padding: 0px 0px 0px 0px;
+        height: 35vh;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-title {
+        font-size: 1.5rem;
+        width: 70vw;
+        line-height: 25px;
+        margin: 0px;
+    }
+    .about-description {
+        padding: 15px 0px 25px 0px;
+        font-size: 0.7rem;
+        width: 90%;
+        line-height: 16px;
+    }
+    .about-description-right {
+        text-align: left;
+        margin: 0px;
+        padding: 10px 0px 0px 0px;
+        font-weight: 400;
+        color: white;
+        font-size: 0.5rem;
+        width: 75%;
+    }
+    .about-title-right {
+        text-align: center;
+        margin: 0px;
+        padding: 0px 0px 10px 0px;
+        font-weight: 400;
+        border-bottom: 1px solid rgb(143, 0, 72);
+        color: white;
+        font-size: 1.5rem;
+        width: 85%;
+        line-height: 20px;
+    }
+    .about-right-button {
+        width: unset;
+        font-size: 0.7rem;
+        margin: 10px 0px 0px 0px;
+        padding: 0px 0px 0px 0px;
+        
+    }
+    .about-right-button .btn {
+        
+        font-size: 0.8rem;
+        padding: 0px 5px 0px 5px;
+        margin: 0px 0px 0px 0px;
+
+    }
+    .header-button-white,
+    .header-button-white:active {
+
+    }
+}
+@media (max-width: 740px) {
+    .about-container {
+
+    }
+    .about-container-top {
+        padding: 20px 20px 20px 20px;
+    }
+    .about-container-bottom {
+
+    }
+    .about-container-bottom-right {
+        display: flex;
+        flex: 1;
+        background-color: #232323;
+        padding: 0px 0px 0px 0px;
+        height: 75vh;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-container-bottom-left {
+        display: flex;
+        flex: 1;
+        background-image: url(https://i.imgur.com/AzYkCf0.webp);
+        background-size: cover;
+        padding: 0px 0px 0px 0px;
+        height: 75vh;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-title {
+        font-size: 1.1rem;
+        width: 50vw;
+        line-height: 25px;
+        margin: 0px;
+    }
+    .about-description {
+        padding: 15px 0px 25px 0px;
+        font-size: 0.5rem;
+        width: 90%;
+        line-height: 16px;
+    }
+    .about-description-right {
+        text-align: left;
+        margin: 0px;
+        padding: 10px 0px 0px 0px;
+        font-weight: 400;
+        color: white;
+        font-size: 0.4rem;
+        width: 75%;
+    }
+    .about-title-right {
+        text-align: center;
+        margin: 0px;
+        padding: 0px 0px 10px 0px;
+        font-weight: 400;
+        border-bottom: 1px solid rgb(143, 0, 72);
+        color: white;
+        font-size: 1.2rem;
+        width: 85%;
+        line-height: 20px;
+    }
+    .about-right-button {
+        width: unset;
+        font-size: 0.7rem;
+        margin: 10px 0px 0px 0px;
+        padding: 0px 0px 0px 0px;
+        
+    }
+    .about-right-button .btn {
+        
+        font-size: 0.8rem;
+        padding: 0px 5px 0px 5px;
+        margin: 0px 0px 0px 0px;
+
+    }
+    .header-button-white,
+    .header-button-white:active {
+
+    }
+}
 
 @media (max-width: 450px) {
     .about-container {
@@ -184,7 +433,6 @@
 
     }
 }
-
 
 @media (max-width: 350px) {
     .about-container {
