--- a/client/src/pages/about/helpers/About.css
+++ b/client/src/pages/about/helpers/About.css
@@ -5,7 +5,6 @@
     align-items: center;
 
 }
-
 .about-div-responsive {
     display: flex;
     justify-content: flex-end;
@@ -68,7 +67,6 @@
     box-shadow: 0 8px 48px 0 rgba(31, 38, 135, 0.5); /* Adjusting box shadow on hover */
     transform: translateY(-5px); /* Adding slight lift effect on hover */
 }
-
 .about-div-bulleted-bring {
     padding: 0px 0px 20px 0px;
     color: white;
@@ -91,8 +89,10 @@
     display: flex; /* Utilizes flexbox for layout */
     flex-direction: column; /* Stacks list items vertically */
     gap: 5px; /* Space between list items */
+    flex-wrap: wrap; /* Allow list items to wrap to the next line */
+    justify-content: space-between; /* Distribute items evenly across the row */
+    flex-direction: row;
 }
-
 .unordered-list-about-bring li {
     background-color: #e0e0e0; /* Slightly different bg color for list items */
     padding: 4px 8px 4px 8px; /* Padding inside list items */
@@ -101,14 +101,15 @@
     font-weight: bold;
     text-shadow: 2px 2px 4px rgb(255, 255, 255); /* Text shadow */
     
-    width: fit-content;
+
     color: black;
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
     background-color: rgba(255, 255, 255, 0.95);
     border: 1px solid rgb(0, 0, 0);
-}
+    width: max-content; /* Adjust width to fit three items per row */
 
+}
 .unordered-list-about-bring button {
     background-color: #e0e0e0; /* Slightly different bg color for list items */
     padding: 4px 8px 4px 8px; /* Padding inside list items */
@@ -124,7 +125,6 @@
     background-color: rgba(255, 255, 255, 0.95);
     border: 1px solid rgb(0, 0, 0);
 }
-
 .unordered-list-about-bring li img {
     width: 100%; /* Ensures images fit within the list item */
     max-width: 100px; /* Max width for images */
@@ -143,7 +143,6 @@
     position: relative; /* Add position relative */
     height: 100%; /* Ensure the container has a height */
 }
-
 .unordered-list-about {
     flex-direction: column;
     list-style-type: none;
@@ -157,7 +156,6 @@
     grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
     gap: 0px 30px;
 }
-
 .unordered-list-about li {
     padding: 10px 0px 10px 0px;
     font-size: 0.5rem;
@@ -165,12 +163,10 @@
 .unordered-list-about li img {
     max-width: 100px;
 }
-
 #about-div-image-responsive {
     display: flex;
     width: 100%;
 }
-
 #about-div-doctor-responsive {
     display: flex;
     position: absolute;
@@ -178,14 +174,11 @@
     width: 52%; /* Occupy the full width of the parent container */
     align-self: flex-start; /* Align to the top of its flex container */
 }
-
-
 @media (max-width: 1795px) {
     #about-div-doctor-responsive {
         width: 52%;    
     }
 }
-
 @media (max-width: 1676px) {
     .about-div-responsive {
         width: 70%;
@@ -195,11 +188,12 @@
         width: 50%;
     }
 }
-
 @media (max-width: 1450px) {
     .about-div-responsive {
         width: 70%;
+        position: relative;
         margin: 30px; /* Add margin around the whole div */
+        top: -85px;
     }
     #about-div-doctor-responsive {
         width: 48%;    
@@ -208,8 +202,22 @@
         display: flex;
         width: 70%;
     }
-}
+    .appointment-section {
+        position: relative;
+        top: 25px;
+    }
+    .unordered-list-about-bring {
+        display: flex;
+        flex-wrap: wrap; /* Allow list items to wrap to the next line */
+        justify-content: space-between; /* Distribute items evenly across the row */
+        flex-direction: row;
+    }
+    .unordered-list-about-bring li {
+        font-size: 01rem;
+        width: max-content; /* Adjust width to fit three items per row */
 
+    }
+}
 @media (max-width: 1220px) {
     .about-div-responsive {
         width: 70%;
@@ -219,12 +227,12 @@
         width: 50%;    
     }
 }
-
-
 @media (max-width: 1120px) {
     .about-div-responsive {
+        position: relative;
         width: 70%;
         margin: 30px 30px 300px 30px; /* Add margin around the whole div */
+        top: 10px;
     }
     #about-div-doctor-responsive {
         width: 50%;    
@@ -240,8 +248,29 @@
         height: 80%;
         margin: 0px;
     }
+    .appointment-section {
+        position: relative;
+        width: 220px;
+        top: 0px;
+        padding: 10px 10px 10px 10px;
+    }
+    .unordered-list-about-bring {
+        display: flex;
+        flex-wrap: wrap; /* Allow list items to wrap to the next line */
+        justify-content: space-between; /* Distribute items evenly across the row */
+        flex-direction: row;
+    }
+    .unordered-list-about-bring li {
+        font-size: 0.8rem;
+    }
+    .about-div-bulleted-bring h2 {
+        font-size: 1rem;
+    }
+    .about-div-bulleted-bring p {
+        padding: 0px 7px 0px 7px;
+        font-size: 0.8rem;
+    }
 }
-
 @media (max-width: 1015px) {
     .about-div-responsive {
         width: 85%;
@@ -261,7 +290,6 @@
         overflow: hidden;    
         margin-top: 53px;
     }
-    
     #about-div-doctor-responsive {
         width: 70%; /* Set width to 100% */
         align-self: flex-end; /* Align to the bottom of the parent container */
@@ -278,9 +306,9 @@
         display: flex;
         flex-direction: column;
     }
-
-    .about-div-bulleted p {
+    .about-div-bulleted-bring p {
         width: 100%;
+        align-self: center;
     }
     .unordered-list-about {
         margin-top: 20px; /* Add margin to separate the text from the images */
@@ -298,7 +326,6 @@
         justify-content: center; /* Center items vertically */
         justify-items: center; /* Center items horizontally */
     }
-    
     #bullet-list-div-mobile h2 p {
         font-size: 1.2rem;
         /* align-self: center; */
@@ -312,15 +339,50 @@
         max-width: 150px;
         min-width: 80px;
     }
-    
 }
-
 @media (max-width: 950px) {
     #about-div-doctor-responsive {
         top: -121px;
     }
     .about-div-bulleted p {
         font-size: 1.6rem;
+    }
+    .about-parent-div {
+        flex-direction: column;
+    }
+    .about-div-bulleted-bring p {
+        font-size: 1.2rem;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .about-div-responsive {
+        margin: 30px 30px 30px 30px;
+        position: relative;
+    }
+    .appointment-section {
+        right: unset;
+        top: unset;
+        width: 92vw;
+        position: relative;
+        padding: 0.5rem;
+        margin: 0px 0px 0px 0px;
+        align-self: center;
+    }
+    .about-div-bulleted-bring h2 {
+        font-size: 1.6rem;
+        text-align: center;
+    }
+    .unordered-list-about-bring {
+        display: flex;
+        flex-wrap: wrap; /* Allow list items to wrap to the next line */
+        justify-content: space-between; /* Distribute items evenly across the row */
+        flex-direction: row;
+    }
+    .unordered-list-about-bring li {
+        font-size: 1.1rem;
+        padding: 0px 10px 0px 10px;
+        width: max-content; /* Adjust width to fit three items per row */
+
     }
 }
 @media (max-width: 815px) {
@@ -331,21 +393,21 @@
         flex-direction: column;
         align-items: center;
     }
-
     .unordered-list-about {
         flex-direction: column; /* Ensure vertical stacking on smaller screens */
     }
     .about-parent-div {
         flex-direction: column;
     }
-
     .about-div-bulleted-bring p {
         font-size: 1.4rem;
         text-align: center;
+        margin-bottom: 20px;
     }
     .about-div-responsive {
         margin: 30px 30px 30px 30px;
         position: relative;
+        top: -10px;
     }
     .appointment-section {
         right: unset;
@@ -380,7 +442,6 @@
     .about-parent-div {
         flex-direction: column;
     }
-
     .about-div-bulleted-bring p {
         font-size: 1.2rem;
         text-align: center;
@@ -426,10 +487,13 @@
     .about-div-bulleted-bring p {
         font-size: 1.2rem;
         text-align: center;
+        padding: 5px 10px 5px 10px;
     }
     .about-div-responsive {
         margin: 30px 30px 30px 30px;
         position: relative;
+        top: -20px;
+
     }
     .appointment-section {
         right: unset;
@@ -469,8 +533,10 @@
         left: 0;    
     }
     .about-div-bulleted-bring p {
+        width: 95%;
         font-size: 1.2rem;
         text-align: left;
+        padding: 10px 20px 10px 20px;
     }
     .about-parent-div {
         flex-direction: column;
@@ -482,6 +548,7 @@
     .about-div-responsive {
         margin: 30px 30px 30px 30px;
         position: relative;
+        top: -50px;
     }
     .appointment-section {
         right: unset;
@@ -518,10 +585,12 @@
     }
     .about-div-bulleted-bring p {
         font-size: 1rem;
+        margin-bottom: 0px;
     }
     .about-div-responsive {
         margin: 30px 30px 30px 30px;
         position: relative;
+        top: -50px;
     }
     .appointment-section {
         right: unset;
@@ -549,7 +618,6 @@
 
     }
 }
-
 @media (max-width: 380px) {
     .about-parent-div {
         flex-direction: column;
@@ -557,12 +625,16 @@
     #about-div-doctor-responsive {
         top: -18px;
     }
-    .about-div-bulleted p {
+    .about-div-bulleted-bring p {
         font-size: 1rem;
+        margin-bottom: 0px;
+        width: 90%;
+        padding: 5px 20px 5px 20px;
     }
     .about-div-responsive {
         margin: 30px 30px 30px 30px;
         position: relative;
+        top: -50px;
     }
     .appointment-section {
         right: unset;
@@ -590,13 +662,12 @@
 
     }
 }
-
 @media (max-width: 350px) {
     .about-parent-div {
         flex-direction: column;
     }
     #about-div-doctor-responsive {
-        top: 8px;
+        top: -6px;
     }
     .about-div-bulleted p {
         font-size: 1rem;
@@ -604,10 +675,11 @@
     .about-div-responsive {
         margin: 30px 30px 30px 30px;
         position: relative;
+        top: -65px;
     }
     .appointment-section {
         right: unset;
-        top: unset;
+        top: -80px;
         width: 92vw;
         position: relative;
         padding: 0.5rem;
@@ -628,5 +700,11 @@
         padding: 0px 8px 0px 8px;
         width: max-content; /* Adjust width to fit three items per row */
 
+    }
+}
+
+@media (max-width: 245px) {
+    #about-div-doctor-responsive {
+        top: 8px;
     }
 }
